RESOLVED FIXED234522
REGRESSION (r287258): Flaky crash in WebCore::RTCRtpScriptTransformer::enqueueFrame
https://bugs.webkit.org/show_bug.cgi?id=234522
Summary REGRESSION (r287258): Flaky crash in WebCore::RTCRtpScriptTransformer::enqueu...
Ryan Haddad
Reported 2021-12-20 12:43:12 PST
Created attachment 447620 [details] crash log imported/w3c/web-platform-tests/webrtc-encoded-transform/script-transform.https.html appears to have become a flaky crash on iOS and macOS debug bots after https://trac.webkit.org/changeset/287258/webkit landed Thread 22 Crashed:: WebCore: Worker 0 com.apple.WebCore 0x000000011c837768 WebCore::RTCRtpScriptTransformer::enqueueFrame(WebCore::ScriptExecutionContext&, WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&&) + 104 (RTCRtpScriptTransformer.cpp:152) 1 com.apple.WebCore 0x000000011c837768 WebCore::RTCRtpScriptTransformer::enqueueFrame(WebCore::ScriptExecutionContext&, WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&&) + 104 (RTCRtpScriptTransformer.cpp:152) 2 com.apple.WebCore 0x000000011c85bcd8 WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> > auto WebCore::RTCRtpScriptTransformer::start(WTF::Ref<WebCore::RTCRtpTransformBackend, WTF::RawPtrTraits<WebCore::RTCRtpTransformBackend> >&&)::$_8::operator()<WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> > >(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&&)::'lambda'(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&)::operator()<WebCore::ScriptExecutionContext>('lambda'(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&)) + 104 (RTCRtpScriptTransformer.cpp:130) 3 com.apple.WebCore 0x000000011c85bbc0 WTF::Detail::CallableWrapper<auto WebCore::RTCRtpScriptTransformer::start(WTF::Ref<WebCore::RTCRtpTransformBackend, WTF::RawPtrTraits<WebCore::RTCRtpTransformBackend> >&&)::$_8::operator()<WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> > >(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&&)::'lambda'(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&), void, WebCore::ScriptExecutionContext&>::call(WTF::Detail::CallableWrapper<auto WebCore::RTCRtpScriptTransformer::start(WTF::Ref<WebCore::RTCRtpTransformBackend, WTF::RawPtrTraits<WebCore::RTCRtpTransformBackend> >&&)::$_8::operator()<WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> > >(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&&)::'lambda'(WTF::Ref<WebCore::RTCRtpTransformableFrame, WTF::RawPtrTraits<WebCore::RTCRtpTransformableFrame> >&), void, WebCore::ScriptExecutionContext&>) + 64 (Function.h:53) 4 com.apple.WebCore 0x000000011cb28648 WTF::Function<void (WebCore::ScriptExecutionContext&)>::operator()(WebCore::ScriptExecutionContext&) const + 160 (Function.h:82) 5 com.apple.WebCore 0x000000011cb0f228 WebCore::ScriptExecutionContext::Task::performTask(WebCore::ScriptExecutionContext&) + 32 (ScriptExecutionContext.h:206) 6 com.apple.WebCore 0x000000011f9b38cc WebCore::WorkerDedicatedRunLoop::Task::performTask(WebCore::WorkerOrWorkletGlobalScope*) + 100 (WorkerRunLoop.cpp:269) 7 com.apple.WebCore 0x000000011f9b2ddc WebCore::WorkerDedicatedRunLoop::runInMode(WebCore::WorkerOrWorkletGlobalScope*, WebCore::ModePredicate const&) + 732 (WorkerRunLoop.cpp:208) 8 com.apple.WebCore 0x000000011f9b2a48 WebCore::WorkerDedicatedRunLoop::run(WebCore::WorkerOrWorkletGlobalScope*) + 104 (WorkerRunLoop.cpp:143) 9 com.apple.WebCore 0x000000011f97bbe8 WebCore::WorkerOrWorkletThread::runEventLoop() + 104 (WorkerOrWorkletThread.cpp:108) 10 com.apple.WebCore 0x000000011f95c464 WebCore::DedicatedWorkerThread::runEventLoop() + 84 (DedicatedWorkerThread.cpp:58) 11 com.apple.WebCore 0x000000011f97bf60 WebCore::WorkerOrWorkletThread::workerOrWorkletThread() + 876 (WorkerOrWorkletThread.cpp:182) 12 com.apple.WebCore 0x000000011f9d2da8 WebCore::WorkerThread::createThread()::$_4::operator()() const + 28 (WorkerThread.cpp:120) 13 com.apple.WebCore 0x000000011f9d2d24 WTF::Detail::CallableWrapper<WebCore::WorkerThread::createThread()::$_4, void>::call() + 28 (Function.h:53) 14 com.apple.JavaScriptCore 0x000000013ed9b0e4 WTF::Function<void ()>::operator()() const + 124 (Function.h:82) 15 com.apple.JavaScriptCore 0x000000013ee75db0 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) + 396 (Threading.cpp:191) 16 com.apple.JavaScriptCore 0x000000013ee84488 WTF::wtfThreadEntryPoint(void*) + 24 (ThreadingPOSIX.cpp:244) 17 libsystem_pthread.dylib 0x0000000188a73878 0x188a6c000 + 30840 18 libsystem_pthread.dylib 0x0000000188a6e5e0 0x188a6c000 + 9696 https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc-encoded-transform%2Fscript-transform.https.html
Attachments
crash log (151.67 KB, text/plain)
2021-12-20 12:43 PST, Ryan Haddad
no flags
Patch (1.70 KB, patch)
2021-12-21 00:27 PST, youenn fablet
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2021-12-20 12:43:24 PST
youenn fablet
Comment 2 2021-12-21 00:27:33 PST
EWS
Comment 3 2021-12-21 02:17:43 PST
Committed r287307 (245459@main): <https://commits.webkit.org/245459@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447694 [details].
Note You need to log in before you can comment on or make changes to this bug.