REGRESSION (r287258): Flaky crash in WebCore::RTCRtpScriptTransformer::enqueueFrame https://bugs.webkit.org/show_bug.cgi?id=234522 <rdar://problem/86736206>

Reviewed by Darin Adler.

Covered by tests no longer crashing.

* Modules/mediastream/RTCRtpScriptTransformer.cpp:
(WebCore::RTCRtpScriptTransformer::enqueueFrame):
Add a null check in enqueueFrame since the transformer may be cleared during the time
of hopping from webrtc frame thread to worker thread.



Canonical link: https://commits.webkit.org/245459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287307 268f45cc-cd09-0410-ab3c-d52691b4dbfc